cabal-version:      2.4
name:               lions-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Florian Beeres
maintainer:         yuuki@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lions-backend
  ghc-options:
    -Wall

  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Layout
    Locale
    LandingPage.Handlers
    LandingPage.UsersList
    User.Form
    User.Handlers
    User.Domain
    User.Profile
    User.DB
    Session.Domain
    Session.Middleware
    Session.DB
    WelcomeMessage.DB
    WelcomeMessage.Handlers
    WelcomeMessage.Domain
    WelcomeMessage.Form
    Wai
    WelcomeMessage.Card
    Login.Handlers
    Login.Form
    App
    RequestID.Middleware
    Events.Handlers
    Events.EventForm
    Events.EventCard
    Events.SingleEvent
    Events.Domain
    Events.DB
    Routes.Data
    Form.Form

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base       ^>=4.14.1.0
    , wai
    , wai-extra
    , warp
    , http-types
    , lucid
    , wai-session
    , wai-middleware-static
    , cookie
    , sqlite-simple
    , text
    , text-show
    , clientsession
    , bytestring
    , bcrypt
    , time
    , errors
    , mtl
    , transformers
    , vault
    , wai-session
    , safe-exceptions
    , unliftio
    , containers
    , email-validate
    , crypto-api
    , capability
    , katip
    , uuid
    , aeson

  hs-source-dirs:   app, src-hs
  default-language: Haskell2010
