cabal-version:      2.4
name:               lions-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Florian Beeres
maintainer:         yuuki@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-props
  ghc-options:      -Wall
  default-language: Haskell2010
  default-extensions:
    DerivingVia
    RecordWildCards
    QuasiQuotes
    DeriveGeneric
    NamedFieldPuns
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables


test-suite tests
  import:         shared-props
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests-hs
  other-modules:
    Helpers
    ScryptTest
    LoginTests
    PasswordReset.Test
    Events.DBTests
  build-depends:
    , base
    , filepattern
    , lions-backend
    , containers
    , sqlite-simple
    , clientsession
    , bytestring
    , wai-extra
    , wai
    , amazonka-ses
    , fast-logger
    , uri-encode
    , email-validate
    , lens
    , lucid
    , time
    , tasty
    , http-types
    , tasty-hunit
    , text
    , string-interpolate

library
  import:          shared-props
  hs-source-dirs:  src-hs
  build-depends:
    , aeson
    , amazonka
    , amazonka-ses
    , base                   ^>=4.14.1.0
    , base64
    , bcrypt
    , bytestring
    , cipher-aes
    , clientsession
    , containers
    , cookie
    , crypto-api
    , crypto-cipher-types
    , email-validate
    , fast-logger
    , http-types
    , lens
    , lucid
    , safe-exceptions
    , scrypt
    , sqlite-simple
    , string-interpolate
    , text
    , time
    , uri-encode
    , uuid
    , vault
    , wai
    , wai-extra
    , wai-middleware-static
    , wai-session
    , warp

  exposed-modules:
    App
    Env
    Events.DB
    Events.Domain
    Events.EventCard
    Events.EventForm
    Events.Handlers
    Events.SingleEvent
    Form.Form
    LandingPage.Handlers
    Layout
    Locale
    Logging.Logging
    Login
    PasswordReset
    RequestID.Middleware
    Routes.Data
    Scrypt
    Session.DB
    Session.Domain
    Session.Middleware
    Time.Time
    User.DB
    User.Domain
    User.Form
    User.Handlers
    User.Memberlist
    User.Profile
    Wai
    WelcomeMessage.Card
    WelcomeMessage.DB
    WelcomeMessage.Domain
    WelcomeMessage.Form
    WelcomeMessage.Handlers

executable run-lions-backend
  import:         shared-props
  main-is:        Main.hs
  build-depends:
    , base
    , lions-backend

  hs-source-dirs: app
