cabal-version:      2.4
name:               lions-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Florian Beeres
maintainer:         yuuki@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-props
  ghc-options:
    -Wall
    -threaded
  default-language: Haskell2010
  default-extensions:
    DerivingVia
    RecordWildCards
    GADTs
    QuasiQuotes
    DeriveGeneric
    LambdaCase
    FlexibleInstances
    FlexibleContexts
    DuplicateRecordFields
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables

test-suite tests
  import:         shared-props
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  other-modules:
    Helpers
    Scrypt.Test
    Session.Test
    Feed.Message.Test
    Login.Test
    Password.Reset.Test
    Password.Change.Test
  build-depends:
    , base                   == 4.14.3.0
    , filepattern
    , lions-backend
    , unliftio
    , containers
    , sqlite-simple
    , clientsession
    , bytestring
    , mtl
    , safe-exceptions
    , transformers
    , wai-extra
    , wai
    , amazonka-ses
    , vault
    , warp
    , uri-encode
    , cookie
    , email-validate
    , katip
    , filepath
    , resourcet
    , directory
    , lucid
    , time
    , tasty
    , http-types
    , tasty-hunit
    , text
    , string-interpolate

library
  import:          shared-props
  hs-source-dirs:  src
  build-depends:
    , aeson
    , amazonka
    , amazonka-ses
    , base                   ^>=4.14.1.0
    , base64
    , data-default
    , bytestring
    , clientsession
    , filepattern
    , containers
    , cookie
    , resourcet
    , email-validate
    , http-types
    , microlens
    , lucid
    , safe-exceptions
    , cryptonite
    , sqlite-simple
    , string-interpolate
    , text
    , time
    , uri-encode
    , mtl
    , katip
    , uuid
    , cmark-gfm
    , xss-sanitize
    , vault
    , directory
    , filepath
    , wai
    , wai-extra
    , unliftio
    , errors
    , wai-middleware-static
    , wai-session
    , warp

  exposed-modules:
    Lib
    Env
    Events.API
    Events.HTML
    Events.DB
    Events.Event
    Events.Reply
    Feed.Form
    Feed.Message
    Server
    Form
    Layout
    Locale
    Logging
    Login.Login
    Login.LoginForm
    Password.Password
    Password.Reset.Token
    Password.Reset.Handlers
    Password.Reset.Form
    Password.Change.Handlers
    Password.Change.Form
    Session.Middleware
    Session.Session
    Session.Valid
    Request.Types
    Request.Middleware
    App
    Password.Reset.Mail
    DB
    Scrypt
    Time
    User.Handler
    User.Form
    User.Profile
    User.List
    User.Id
    User.User
    User.Role.Role
    User.Session
    User.Email
    User.Role.DB
    Wai
    WelcomeMessage

executable run-lions-backend
  import:         shared-props
  main-is:        Main.hs
  build-depends:
    , base                   == 4.14.3.0
    , lions-backend

  hs-source-dirs: app
