cabal-version:      2.4
name:               lions-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Florian Beeres
maintainer:         yuuki@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common deps
  build-depends:
    , aeson
    , amazonka
    , amazonka-ses
    , base                   ^>=4.14.1.0
    , base64
    , data-default
    , bytestring
    , clientsession
    , filepattern
    , containers
    , cookie
    , resourcet
    , email-validate
    , http-types
    , microlens
    , lucid
    , safe-exceptions
    , cryptonite
    , sqlite-simple
    , string-interpolate
    , text
    , time
    , uri-encode
    , mtl
    , katip
    , uuid
    , cmark-gfm
    , xss-sanitize
    , vault
    , directory
    , filepath
    , wai
    , wai-extra
    , unliftio
    , errors
    , wai-middleware-static
    , wai-session
    , warp


common shared-props
  default-language: Haskell2010

  ghc-options:
    -Wall

  default-extensions:
    DerivingVia
    RecordWildCards
    QuasiQuotes
    DeriveGeneric
    LambdaCase
    FlexibleInstances
    FlexibleContexts
    DuplicateRecordFields
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables

test-suite tests
  import:         shared-props, deps

  main-is:        Main.hs

  type:           exitcode-stdio-1.0

  hs-source-dirs: src, tests

  other-modules:
    Scrypt
    Scrypt.Test

  build-depends:
    , tasty
    , tasty-hunit

library
  import:          shared-props, deps

  hs-source-dirs:  src

  exposed-modules:
    Lib
    Events.API
    Events.HTML
    Events.DB
    Events.Event
    Events.Reply
    Feed.Form
    Feed.Message
    Server
    Form
    Layout
    Locale
    Logging
    Login.Login
    Login.LoginForm
    Password.Password
    Password.Reset.Token
    Password.Reset.Handlers
    Password.Reset.Form
    Password.Change.Handlers
    Password.Change.Form
    Session.Middleware
    Session.Session
    Session.Valid
    Request.Types
    Request.Middleware
    App
    DB
    Scrypt
    Time
    User.Handler
    User.Form
    User.Profile
    User.List
    User.Id
    User.User
    User.Role.Role
    User.Session
    User.Email
    User.Role.DB
    Wai
    WelcomeMessage

executable run-lions-backend
  import:         shared-props
  main-is:        Main.hs

  ghc-options:
    -Wall
    -threaded

  build-depends:
    , base                   == 4.14.3.0
    , lions-backend

  hs-source-dirs: app
